[package]
authors = [ 'EverX Labs Ltd <support@everx.dev>' ]
build = 'build.rs'
description = 'command line tool for TVM blockchain'
documentation = 'https://docs.everos.dev/'
edition = '2021'
homepage = 'https://docs.everos.dev/'
keywords = [
    'TVM',
    'SDK',
    'smart-contract',
    'everx-labs',
    'solidity'
]
license = 'Apache-2.0'
name = 'ever-cli'
readme = 'README.md'
repository = 'https://github.com/everx-labs/ever-cli'
version = '0.36.9'
default-run = 'ever-cli'

[features]
sold = ["dep:sold"]

[dependencies]
async-trait = '0.1.42'
base64 = '0.13'
chrono = '0.4'
clap = '2.32'
failure = '0.1'
futures = '0.3'
hex = '0.4'
indicatif = '0.16'
num-bigint = '0.4'
num-traits = '0.2'
qr2term = '0.2'
regex = '1.5'
reqwest = '0.11'
serde_derive = '1.0'
serde_json = '1.0'
simplelog = '0.8'
tokio-retry = '0.3'
log = { features = [ 'std' ], version = '0.4' }
serde = { features = [ 'derive' ], version = '1.0' }
tokio = { default-features = false, features = [ 'full' ], version = '1.21' }
url = '2.3.1'

ton_abi = { git = 'https://github.com/everx-labs/ever-abi.git',  tag = '2.4.10' }
ton_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.9.118' }
ton_block_json = { git = 'https://github.com/everx-labs/ever-block-json.git', tag = '0.7.206' }
ton_executor = { git = 'https://github.com/everx-labs/ever-executor.git', tag = '1.16.98' }
ton_labs_assembler = { git = 'https://github.com/everx-labs/ever-assembler.git', tag = '1.4.30' }
ton_sdk = { git = 'https://github.com/everx-labs/ever-sdk.git', tag = '1.45.1' }
ton_client = { git = 'https://github.com/everx-labs/ever-sdk.git', tag = '1.45.1' }
ton_types = { git = 'https://github.com/everx-labs/ever-types.git', tag = '2.0.31' }
ton_vm = { git = 'https://github.com/everx-labs/ever-vm.git', tag = '1.8.226' }
sold = { git = 'https://github.com/everx-labs/TVM-Solidity-Compiler.git', tag = '0.66.0', optional = true }

[dev-dependencies]
assert_cmd = '2.0'
lazy_static = '1.4'
predicates = '2.1'
string-error = '0.1.0'

[[bin]]
name = "ever-cli"
path = "src/main.rs"

[[bin]]
name = "__ever-cli_completion"
path = "src/completion.rs"

[patch.'https://github.com/tonlabs/ton-labs-abi.git']
ton_abi = { git = 'https://github.com/everx-labs/ever-abi.git',  tag = '2.4.10' }

[patch.'https://github.com/tonlabs/ever-abi.git']
ton_abi = { git = 'https://github.com/everx-labs/ever-abi.git',  tag = '2.4.10' }

[patch.'https://github.com/tonlabs/ton-labs-block.git']
ton_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.9.118' }

[patch.'https://github.com/tonlabs/ever-block.git']
ton_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.9.118' }

[patch.'https://github.com/tonlabs/ton-labs-block-json.git']
ton_block_json = { git = 'https://github.com/everx-labs/ever-block-json.git', tag = '0.7.206' }

[patch.'https://github.com/tonlabs/ever-block-json.git']
ton_block_json = { git = 'https://github.com/everx-labs/ever-block-json.git', tag = '0.7.206' }

[patch.'https://github.com/tonlabs/ton-labs-executor.git']
ton_executor = { git = 'https://github.com/everx-labs/ever-executor.git', tag = '1.16.98' }

[patch.'https://github.com/tonlabs/ever-executor.git']
ton_executor = { git = 'https://github.com/everx-labs/ever-executor.git', tag = '1.16.98' }

[patch.'https://github.com/tonlabs/ton-labs-assembler.git']
ton_labs_assembler = { git = 'https://github.com/everx-labs/ever-assembler.git', tag = '1.4.30' }

[patch.'https://github.com/tonlabs/ever-assembler.git']
ton_labs_assembler = { git = 'https://github.com/everx-labs/ever-assembler.git', tag = '1.4.30' }

[patch.'https://github.com/tonlabs/ton-labs-types.git']
ton_types = { git = 'https://github.com/everx-labs/ever-types.git', tag = '2.0.31' }

[patch.'https://github.com/tonlabs/ever-types.git']
ton_types = { git = 'https://github.com/everx-labs/ever-types.git', tag = '2.0.31' }

[patch.'https://github.com/tonlabs/ton-labs-vm.git']
ton_vm = { git = 'https://github.com/everx-labs/ever-vm.git', tag = '1.8.226' }

[patch.'https://github.com/tonlabs/ever-vm.git']
ton_vm = { git = 'https://github.com/everx-labs/ever-vm.git', tag = '1.8.226' }

[patch.'https://github.com/tonlabs/ever-tl.git']
ton_api = { git = 'https://github.com/everx-labs/ever-tl.git', tag = '0.3.5' }
