[package]
authors = [ 'EverX Labs Ltd <support@everx.dev>' ]
build = 'build.rs'
description = 'command line tool for TVM blockchain'
documentation = 'https://docs.everos.dev/'
edition = '2021'
homepage = 'https://docs.everos.dev/'
keywords = [
    'TVM',
    'SDK',
    'smart-contract',
    'everx-labs',
    'solidity'
]
license = 'Apache-2.0'
name = 'ever-cli'
readme = 'README.md'
repository = 'https://github.com/everx-labs/ever-cli'
version = '0.38.3'
default-run = 'ever-cli'

[dependencies]
async-trait = '0.1.42'
base64 = '0.13'
chrono = '0.4'
clap = '2.32'
anyhow = '1.0'
thiserror = '1.0'
futures = '0.3'
hex = '0.4'
indicatif = '0.16'
num-bigint = '0.4'
num-traits = '0.2'
qr2term = '0.2'
regex = '1.5'
reqwest = '0.11'
serde_derive = '1.0'
serde_json = '1.0'
simplelog = '0.8'
tokio-retry = '0.3'
log = { features = [ 'std' ], version = '0.4' }
serde = { features = [ 'derive' ], version = '1.0' }
tokio = { default-features = false, features = [ 'full' ], version = '1.21' }
url = '2.3.1'

ever_abi = { git = 'https://github.com/everx-labs/ever-abi.git',  tag = '2.6.2' }
ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.11.1' }
ever_block_json = { git = 'https://github.com/everx-labs/ever-block-json.git', tag = '0.9.4' }
ever_executor = { git = 'https://github.com/everx-labs/ever-executor.git', tag = '1.18.2' }
ever_assembler = { git = 'https://github.com/everx-labs/ever-assembler.git', tag = '1.6.4' }
ever_sdk = { git = 'https://github.com/everx-labs/ever-sdk.git', tag = '1.47.0' }
ever_client = { git = 'https://github.com/everx-labs/ever-sdk.git', tag = '1.47.0' }
ever_vm = { git = 'https://github.com/everx-labs/ever-vm.git', tag = '2.2.2' }

[dev-dependencies]
assert_cmd = '2.0'
lazy_static = '1.4'
predicates = '2.1'
string-error = '0.1.0'

[[bin]]
name = "ever-cli"
path = "src/main.rs"

[[bin]]
name = "__ever-cli_completion"
path = "src/completion.rs"
